fixed the images overflowing the container

--- a/wwr/styles/siteplan.css
+++ b/wwr/styles/siteplan.css
@@ -130,15 +130,16 @@ span.site-name {
     grid-template-columns: 2fr 1fr;
     gap: 1rem;
     max-width: 93%;
-    margin: 0 auto;
-    
-    
+    margin: 0 auto;   
 }
 
 .wireframe img {
     box-shadow: 0 0 8px rgb(0, 0, 0, 0.8);
     display: block;
+    max-width: 100%;
+    height: auto;
 }
+
 
 /************** Footer **************/
 footer {
